# balaev_a_a

./: .gitignore  CMakeLists.txt  README.md  build.vs.2022.cmake
bin.dbg/: lab03.report.md  lab04.report.md  task.report.md
prj.labs/: CMakeLists.txt
prj.labs/K/: CMakeLists.txt  K.cpp  task.report.md.in.txt
prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
prj.labs/lab02/: lab02.cpp  lab02.report.md.in.txt
prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
prj.labs/lab04/: lab04.cpp  lab04.json  lab04.report.md.in.txt
prj.labs/lab06/: lab06.report.md.in.txt
prj.labs/lab07/: lab07.report.md.in.txt
prj.labs/lab08/: lab08.report.md.in.txt
prj.labs/test/: CMakeLists.txt  test.cpp  via_export_json.json
